[package]
name = "lzss"
version = "0.1.0"
authors = ["johnpyp <20625636+johnpyp@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tokio = { version = "0.2.22", features = ["full"] }
# tokio-util = { version = "0.3.1", features = ["full"] }
# bytes = "0.5.6"
itertools = "0.9.0"
